--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/shukean">View on GitHub</a>
 
-          <h1 id="project_title">Shukean.GitHub.io</h1>
-          <h2 id="project_tagline">Coding Favorites</h2>
+          <h1 id="project_title">Coding Favorites</h1>
+          <h2 id="project_tagline"></h2>
 
         </header>
     </div>
