--- a/index.html
+++ b/index.html
@@ -1,47 +1,6 @@
-<!DOCTYPE html>
-<html>
+---
+profile: true
+---
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Coding Favorites : ">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Coding Favorites</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/shukean">View on GitHub</a>
-
-          <h1 id="project_title">Coding Favorites</h1>
-          <h2 id="project_tagline"></h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a id="shukeangithubio" class="anchor" href="#shukeangithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>shukean.github.io</h1>
-
-<p>Coding Favorites</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
-</html>
+{% include post-list.html %}
+{% include footer.html %}
